@@ -16,19 +16,28 @@
 
 package org.dockbox.hartshorn.inject;
 
-import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.List;
-
 import org.checkerframework.checker.nullness.qual.NonNull;
 import org.dockbox.hartshorn.inject.ComponentDiscoveryList.DiscoveredComponent;
 import org.dockbox.hartshorn.util.CollectionUtilities;
 import org.dockbox.hartshorn.util.introspect.view.ConstructorView;
 import org.dockbox.hartshorn.util.introspect.view.TypeView;
 
-public class ComponentDiscoveryList implements Iterable<DiscoveredComponent> {
+import java.util.Iterator;
+import java.util.LinkedList;
+import java.util.List;
 
-    public static final ComponentDiscoveryList EMPTY = new ComponentDiscoveryList(List.of()); // Intentionally immutable
+/**
+ * A list of components that were discovered during the validation of potentially cyclic components. This list is
+ * used to determine the origin of a cycle dependency, and to provide a list of all components that are involved
+ * in the cycle.
+ *
+ * @see org.dockbox.hartshorn.application.context.validate.CyclicDependencyGraphValidator
+ *
+ * @since 0.5.0
+ *
+ * @author Guus Lieben
+ */
+public class ComponentDiscoveryList implements Iterable<DiscoveredComponent> {
 
     private final List<DiscoveredComponent> discoveredComponents;
 
@@ -40,30 +49,75 @@ public class ComponentDiscoveryList implements Iterable<DiscoveredComponent> {
         this.discoveredComponents = discoveredComponents;
     }
 
+    /**
+     * Adds a new component to the list. The component is added to the front of the list, as it's the most recent
+     * component that was discovered.
+     *
+     * @param node the component to add
+     */
     public void add(TypePathNode<?> node) {
-        this.discoveredComponents.add(0, new DiscoveredComponent(node, node.type()));
+        this.discoveredComponents.addFirst(new DiscoveredComponent(node, node.type()));
     }
 
+    /**
+     * Adds a new component to the list. The component is added to the front of the list, as it's the most recent
+     * component that was discovered.
+     *
+     * @param node the component to add
+     * @param actualType the actual type of the component
+     */
     public void add(TypePathNode<?> node, TypeView<?> actualType) {
-        this.discoveredComponents.add(0, new DiscoveredComponent(node, actualType));
+        this.discoveredComponents.addFirst(new DiscoveredComponent(node, actualType));
     }
 
+    /**
+     * Adds a new component to the list. The component is added to the front of the list, as it's the most recent
+     * component that was discovered.
+     *
+     * @param node the component to add
+     * @param constructor the constructor that was used to create the component
+     */
     public void add(TypePathNode<?> node, ConstructorView<?> constructor) {
-        this.discoveredComponents.add(0, new DiscoveredComponent(node, constructor.declaredBy()));
+        this.discoveredComponents.addFirst(new DiscoveredComponent(node, constructor.declaredBy()));
     }
 
+    /**
+     * Returns a list of all discovered components. The list is ordered from most recently discovered to least
+     * recently discovered. The list is also de-duplicated, as the first component may also be included at the
+     * end of the list.
+     *
+     * @return a list of all discovered components
+     */
     public List<DiscoveredComponent> discoveredComponents() {
         return CollectionUtilities.distinct(this.discoveredComponents);
     }
 
+    /**
+     * Returns a list of all discovered components. The list is ordered from most recently discovered to least
+     * recently discovered. This includes all components, where the first component may also be included at the
+     * end of the list.
+     *
+     * @return a list of all discovered components
+     */
     public List<DiscoveredComponent> discoveredComponentsCyclic() {
         return List.copyOf(this.discoveredComponents);
     }
 
+    /**
+     * Returns whether the list is empty.
+     *
+     * @return {@code true} if the list is empty, {@code false} otherwise
+     */
     public boolean isEmpty() {
         return this.discoveredComponents.isEmpty();
     }
 
+    /**
+     * Returns whether the list contains the given component.
+     *
+     * @param pathNode the component to check for
+     * @return {@code true} if the list contains the component, {@code false} otherwise
+     */
     public boolean contains(TypePathNode<?> pathNode) {
         return this.discoveredComponents.stream().anyMatch(component -> component.node().equals(pathNode));
     }
@@ -74,15 +128,38 @@ public class ComponentDiscoveryList implements Iterable<DiscoveredComponent> {
         return this.discoveredComponents().iterator();
     }
 
+    /**
+     * Returns the origin of the cycle. The origin is the first component that was discovered.
+     *
+     * @return the origin of the cycle
+     */
     public DiscoveredComponent getOrigin() {
         if (this.discoveredComponents.isEmpty()) {
             return null;
         }
-        return this.discoveredComponents.get(0);
+        return this.discoveredComponents.getFirst();
     }
 
+    /**
+     * Represents a discovered component in the {@link ComponentDiscoveryList}. It contains the {@link TypePathNode}
+     * that represents the original binding declaration, and the actual type of the component that was discovered.
+     *
+     * @param node the original binding declaration
+     * @param actualType the actual type of the component
+     *
+     * @since 0.5.0
+     *
+     * @author Guus Lieben
+     */
     public record DiscoveredComponent(TypePathNode<?> node, TypeView<?> actualType) {
 
+        /**
+         * Returns whether the component was discovered from a binding declaration, or from a constructor.
+         * If the component was discovered from a binding declaration, the actual type of the component
+         * will be different from the type of the dependency declaration.
+         *
+         * @return {@code true} if the component was discovered from a binding declaration, {@code false} otherwise
+         */
         public boolean fromBinding() {
             return !this.node.type().is(this.actualType.type());
         }
