@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 the original author or authors.
+ * Copyright 2019-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,138 +16,148 @@
 
 package test.org.dockbox.hartshorn.hsl;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Stream;
+
+import org.dockbox.hartshorn.hsl.ScriptEvaluationError;
 import org.dockbox.hartshorn.hsl.lexer.Comment;
 import org.dockbox.hartshorn.hsl.lexer.Lexer;
+import org.dockbox.hartshorn.hsl.lexer.SimpleTokenRegistryLexer;
+import org.dockbox.hartshorn.hsl.token.DefaultTokenCharacter;
+import org.dockbox.hartshorn.hsl.token.DefaultTokenRegistry;
+import org.dockbox.hartshorn.hsl.token.SimpleTokenCharacter;
 import org.dockbox.hartshorn.hsl.token.Token;
-import org.dockbox.hartshorn.hsl.token.TokenConstants;
-import org.dockbox.hartshorn.hsl.token.TokenType;
+import org.dockbox.hartshorn.hsl.token.TokenCharacter;
+import org.dockbox.hartshorn.hsl.token.TokenMetaData;
+import org.dockbox.hartshorn.hsl.token.type.ArithmeticTokenType;
+import org.dockbox.hartshorn.hsl.token.type.BitwiseTokenType;
+import org.dockbox.hartshorn.hsl.token.type.ConditionTokenType;
+import org.dockbox.hartshorn.hsl.token.type.EnumTokenType;
+import org.dockbox.hartshorn.hsl.token.type.LiteralTokenType;
+import org.dockbox.hartshorn.hsl.token.type.TokenType;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.lang.reflect.Field;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
-import java.util.stream.Stream;
+import test.org.dockbox.hartshorn.hsl.interpreter.InterpreterTestHelper;
 
 public class LexerTests {
 
-    private static final TokenType[] keywords = {
-            TokenType.PREFIX, TokenType.INFIX,
-            TokenType.CLASS, TokenType.EXTENDS,
-            TokenType.IF, TokenType.ELSE,
-            TokenType.FUNCTION, TokenType.RETURN, TokenType.NATIVE,
-            TokenType.TRUE, TokenType.FALSE,
-            TokenType.FOR, TokenType.DO, TokenType.WHILE, TokenType.REPEAT,
-            TokenType.BREAK, TokenType.CONTINUE,
-            TokenType.SUPER, TokenType.THIS,
-            TokenType.NULL, TokenType.TEST,
-            TokenType.VAR, TokenType.IMPORT,
-    };
-
-    private static final List<TokenType> literals = List.of(
-            TokenType.IDENTIFIER,
-            TokenType.STRING,
-            TokenType.NUMBER,
-            TokenType.CHAR,
-            TokenType.EOF);
-
-    private static final TokenType[] singleTokens = {
-            TokenType.LEFT_PAREN, TokenType.RIGHT_PAREN,
-            TokenType.LEFT_BRACE, TokenType.RIGHT_BRACE,
-            TokenType.ARRAY_OPEN, TokenType.ARRAY_CLOSE,
-            TokenType.COMMA, TokenType.DOT,
-            TokenType.MINUS, TokenType.PLUS,
-            TokenType.SEMICOLON, TokenType.EQUAL, TokenType.BANG,
-            TokenType.MODULO, TokenType.STAR, TokenType.SLASH,
-            TokenType.GREATER, TokenType.LESS,
-            TokenType.QUESTION_MARK, TokenType.COLON,
-    };
-
     public static Stream<Arguments> tokens() {
-        List<Arguments> arguments = new ArrayList<>();
-        for (TokenType type : TokenType.values()) {
-            if (literals.contains(type)) {
-                continue;
-            }
+        final List<Arguments> arguments = new ArrayList<>();
+        DefaultTokenRegistry tokenRegistry = DefaultTokenRegistry.createDefault();
+        Set<TokenType> nonLiteralTokens = tokenRegistry.tokenTypes(type -> {
+            return !(type instanceof LiteralTokenType || tokenRegistry.comments().resolveFromOpenToken(type).present());
+        });
+        for (TokenType type : nonLiteralTokens) {
             arguments.add(Arguments.of(type.representation(), type));
         }
-        arguments.add(Arguments.of("12.0", TokenType.NUMBER));
-        arguments.add(Arguments.of("foobar", TokenType.IDENTIFIER));
-        arguments.add(Arguments.of("\"foo\"", TokenType.STRING));
-        arguments.add(Arguments.of("'a'", TokenType.CHAR));
+        arguments.add(Arguments.of("12.0", LiteralTokenType.NUMBER));
+        arguments.add(Arguments.of("foobar", LiteralTokenType.IDENTIFIER));
+        arguments.add(Arguments.of("\"foo\"", LiteralTokenType.STRING));
+        arguments.add(Arguments.of("'a'", LiteralTokenType.CHAR));
         return arguments.stream();
-    }
-
-    public static Stream<Arguments> keywords() {
-        return Arrays.stream(keywords).map(Arguments::of);
-    }
-
-    public static Stream<Arguments> singleCharacterTokens() {
-        return Arrays.stream(singleTokens).map(Arguments::of);
-    }
-
-    @ParameterizedTest
-    @MethodSource("singleCharacterTokens")
-    void testTokenTypesUseConstantsOfSameName(TokenType type) throws IllegalAccessException, NoSuchFieldException {
-        String name = type.name();
-        Field field = TokenConstants.class.getField(name);
-        // Should be static and public
-        char constant = (char) field.get(null);
-        Assertions.assertEquals(String.valueOf(constant), type.representation());
-    }
-
-    @ParameterizedTest
-    @MethodSource("keywords")
-    void testKeywordsMatchExpectedList(TokenType type) {
-        Collection<TokenType> tokenTypes = TokenType.keywords().values();
-        Assertions.assertTrue(tokenTypes.contains(type));
-    }
-
-    @ParameterizedTest
-    @MethodSource("keywords")
-    void testKeywordsHaveCorrectMetaData(TokenType type) {
-        Assertions.assertTrue(type.keyword());
     }
 
     @ParameterizedTest
     @MethodSource("tokens")
     void testCorrectToken(String text, TokenType expected) {
-        Lexer lexer = new Lexer(text);
+        Lexer lexer = new SimpleTokenRegistryLexer(text, InterpreterTestHelper.defaultTokenRegistry());
         List<Token> tokens = lexer.scanTokens();
 
         Assertions.assertNotNull(tokens);
         Assertions.assertEquals(2, tokens.size());
 
-        Token token = tokens.get(0);
+        Token token = tokens.getFirst();
         Assertions.assertEquals(expected, token.type());
         Assertions.assertEquals(1, token.line());
 
         Token eof = tokens.get(1);
-        Assertions.assertEquals(TokenType.EOF, eof.type());
+        Assertions.assertEquals(LiteralTokenType.EOF, eof.type());
     }
 
     @Test
     void testSingleLineComment() {
-        Lexer lexer = new Lexer("# Comment");
+        Lexer lexer = new SimpleTokenRegistryLexer("# Comment", InterpreterTestHelper.defaultTokenRegistry());
         List<Token> tokens = lexer.scanTokens();
 
         Assertions.assertNotNull(tokens);
         Assertions.assertEquals(1, tokens.size());
 
-        Token token = tokens.get(0);
-        Assertions.assertEquals(TokenType.EOF, token.type());
+        Token token = tokens.getFirst();
+        Assertions.assertEquals(LiteralTokenType.EOF, token.type());
 
         List<Comment> comments = lexer.comments();
         Assertions.assertNotNull(comments);
         Assertions.assertEquals(1, comments.size());
 
-        Comment comment = comments.get(0);
+        Comment comment = comments.getFirst();
         // Comments are not trimmed, include whitespace
         Assertions.assertEquals(" Comment", comment.text());
+    }
+
+    @Test
+    void testCombinedOperatorsAreParsedCorrectly() {
+        // No such operator (logical shift left), so should be parsed as '1 << < 2' (1 shift left, less than 2).
+        // While this isn't valid code for HSL, it's a good test to see if the lexer is working as expected.
+        final Lexer lexer = new SimpleTokenRegistryLexer("1 <<< 2", InterpreterTestHelper.defaultTokenRegistry());
+        List<Token> tokens = lexer.scanTokens();
+        Assertions.assertSame(5, tokens.size());
+        Assertions.assertEquals(LiteralTokenType.NUMBER, tokens.get(0).type());
+        Assertions.assertEquals(BitwiseTokenType.SHIFT_LEFT, tokens.get(1).type());
+        Assertions.assertEquals(ConditionTokenType.LESS, tokens.get(2).type());
+        Assertions.assertEquals(LiteralTokenType.NUMBER, tokens.get(3).type());
+        Assertions.assertEquals(LiteralTokenType.EOF, tokens.get(4).type());
+    }
+
+    @Test
+    void testIncompleteTokenStepsBackToParent() {
+        DefaultTokenRegistry registry = DefaultTokenRegistry.createDefault();
+        registry.addTokens(QuadrupleToken.QUADRUPLE_DASH);
+
+        // No token for triple dash, and quadruple dash is incomplete, so should match back based on parent
+        // in token graph (from most specific to least specific). This should result in two tokens, one for
+        // the double dash (MINUS_MINUS), and one for the single dash (MINUS).
+        final Lexer lexer = new SimpleTokenRegistryLexer("---", registry);
+        List<Token> tokens = lexer.scanTokens();
+
+        Assertions.assertSame(3, tokens.size());
+        Assertions.assertEquals(ArithmeticTokenType.MINUS_MINUS, tokens.get(0).type());
+        Assertions.assertEquals(ArithmeticTokenType.MINUS, tokens.get(1).type());
+        Assertions.assertEquals(LiteralTokenType.EOF, tokens.get(2).type());
+    }
+
+    @Test
+    void testIncompleteInvalidTokenFails() {
+        DefaultTokenRegistry registry = DefaultTokenRegistry.createDefault();
+        registry.addTokens(QuadrupleToken.QUADRUPLE_AT);
+
+        final Lexer lexer = new SimpleTokenRegistryLexer("@@@", registry);
+        Assertions.assertThrows(ScriptEvaluationError.class, lexer::scanTokens);
+    }
+
+    enum QuadrupleToken implements EnumTokenType {
+        // --- could still be parsed as -- and -
+        QUADRUPLE_DASH(DefaultTokenCharacter.MINUS),
+        // No token for @, @@, or @@@, so must match QUADRUPLE_AT to be valid.
+        QUADRUPLE_AT(SimpleTokenCharacter.of('@', true)),
+        ;
+
+        private final TokenCharacter character;
+
+        QuadrupleToken(TokenCharacter character) {
+            this.character = character;
+        }
+
+        @Override
+        public TokenType delegate() {
+            return TokenMetaData.builder(this)
+                    .combines(character, character, character, character)
+                    .build();
+        }
     }
 }
